--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,17 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
-# Folder config file
-Desktop.ini
+# expo
+.expo/
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
+# dependencies
+/node_modules
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
+# misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Windows shortcuts
-*.lnk
-
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
